# insurance-spatial

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_databricks_pytest.py
benchmarks/: benchmark.py  run_benchmark.py  run_benchmark_databricks.py
notebooks/: benchmark.py  bym2_demo.py  bym2_inla_demo.py  run_local_tests.py  run_tests.py
src/insurance_spatial/: __init__.py  adjacency.py  bym2_inla.py  diagnostics.py  models.py  plots.py  relativities.py
src/insurance_spatial/conformal/: __init__.py  _kernel.py  _types.py  bandwidth.py  geocoder.py  predictor.py  report.py  scores.py
tests/: conftest.py  test_adjacency.py  test_bym2_inla.py  test_diagnostics.py  test_expanded_coverage_adjacency.py  test_expanded_coverage_diagnostics.py  test_expanded_coverage_models.py  test_expanded_coverage_relativities.py  test_model_integration.py  test_relativities.py
tests/conformal/: conftest.py  test_bandwidth.py  test_expanded_coverage_bandwidth.py  test_expanded_coverage_kernel.py  test_expanded_coverage_predictor.py  test_expanded_coverage_types.py  test_geocoder.py  test_integration.py  test_kernel.py  test_predictor.py  test_report.py  test_scores.py  test_types.py
